# godoos

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.en.md  README.md  app.go  build.linux.sh  build.win.sh  docker-compose.yml  go.mod  go.sum  main.go  wails.json
app/: app.go  download.go  update.go
cloud/: .gitignore  README.md  build.sh  go.mod  main.go
cloud/cmd/: main.go  msg.go  serve.go
cmd/: config.go  fs.go  main.go  os.go  watch.go
docker/: Dockerfile-dev  nginx.conf
docs/: Api.md  Faq.md  Markdown.md  Store.en.md  Store.md  ai.md  file.md
frontend/: .gitignore  README.md  auto-imports.d.ts  components.d.ts  env.d.ts  index.html  package-lock.json  package.json  package.json.md5  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  components.d.ts  main.ts  vite-env.d.ts
godo/: .air.toml  .gitignore  build.sh  go.mod  go.sum  install.linux.sh  linux_build.sh  main.go  quick_build.sh  windows_build.ps1
godo/cmd/: main.go  serve.go  setting.go
godo/convert/: doc.go  epub.go  find.go  http.go  image.go  img.go  main_test.go  odt.go  pdf.go  pptx.go  rtf.go  tidy.go  txt.go  url.go  xlsx.go
godo/files/: destop.go  fs.go  init.go  onlyoffice.go  os.go  pwd.go  pwdfile.go  pwdfile_test.go  search.go  unzip.go  watch.go  zip.go
godo/libs/: chatip.go  config.go  dir.go  encode.go  filecode.go  filecode_test.go  info.go  key.go  msg.go  osinfo.go
libs/: config.go  dir.go
localchat/: client.go  file.go  server.go  sse.go  type.go  upload.go  windiscovery.go
os/: .gitignore  components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  types.d.ts  uno.config.ts  vite.config.ts
os/src-tauri/: Cargo.toml  tauri.conf.json
os/src-tauri/capabilities/: default.json  desktop.json  mobile.json
os/src-tauri/icons/: icon.icns
os/src-tauri/src/: lib.rs
progress/: linux.go  map.go  start.go  stop.go  windows.go
server/: .air.toml  .gitignore  config.json  go.mod  go.sum  main.go
test/: go.mod  main.go
(+967 files in other folders)
